--- a/01_선거 개괄.md
+++ b/01_선거 개괄.md
@@ -74,7 +74,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 그러나 경제적으로 피선거권을 실질적으로 제한하는 문제가 있으니, 바로 <공직선거법> 제56조에 따라 후보등록을 위해 선거관리위원회에 납부하는 기탁금이다. 국회의원후보는 후보등록과 함께 1,500만 원을 기탁금으로 일시불해야 하는데, 이 비용은 당선자 또는 지역구 득표율 15% 이상인 후보에게만 선거가 끝난 후 반환된다. 기탁금의 원래 취지는 장난스러운 후보등록을 막고, 불법선거운동에 대한 과태료 등을 바로바로 징수하기 위한 것이다. 그러나 이를 감안해도 1,500만 원의 비용은 너무 높아서, 고액재산을 형성하기 어려운 청년세대 정치인이나 일반 노동자/직장인, 사회/정치운동 활동가가 진지하게 출마를 고려하더라도 이내 포기하게 된다. 반대로 정치와 전혀 상관없는 직업을 통해 수십억 원대의 재산을 모은 사람이 재미삼아 하는 연쇄출마를 막기에는 턱없이 부족한 액수이다. 이러한 문제 때문에 기탁금 제도는 언제나 논란의 대상이 되었다. 중앙선관위가 2015년에 펴낸 "각 국의 선거제도 비교연구" 자료집에 의하면, 조사대상 22개국 중 국회의원(하원)후보 기탁금 제도가 없는 국가가 미국, 프랑스, 독일, 스웨덴 등 10개국에 이르며, 기탁금이 한화 100만 원을 넘는 국가도 일본, 말레이시아, 터키, 싱가포르 뿐이다. 
 
-한편, 선거권은 있으나 피선거권은 없는 만 18~~24세에 대한 논의가 여전히 진행되고 있다. 만 18세부터 투표할 자격이 주어진다는 점은 곧, 그때부터는 유권자로서 정치적 판단능력이 충분하다고 인정한다는 의미이다. 그렇다면 같은 이유에서 만 18~~24세의 시민권자가 공직에 참여하지 못하도록 막을 이유가 없으며, 투표할 권리와 동등하게 입후보와 선거운동, 공직 활동을 통해 정치적 의사를 실현할 권리를 주어야 한다는 주장이 나오고 있다. 특히 2010년대 이후 한국에서는 청년계층의 정치참여를 막는 정치문화와 선거제도에 대한 비판이 거세게 일어나고 있는데, 만 18~~24세의 피선거권 논쟁도 같은 선상에서 일어나고 있다.
+한편, 선거권은 있으나 피선거권은 없는 만 18~ 24세에 대한 논의가 여전히 진행되고 있다. 만 18세부터 투표할 자격이 주어진다는 점은 곧, 그때부터는 유권자로서 정치적 판단능력이 충분하다고 인정한다는 의미이다. 그렇다면 같은 이유에서 만 18~ 24세의 시민권자가 공직에 참여하지 못하도록 막을 이유가 없으며, 투표할 권리와 동등하게 입후보와 선거운동, 공직 활동을 통해 정치적 의사를 실현할 권리를 주어야 한다는 주장이 나오고 있다. 특히 2010년대 이후 한국에서는 청년계층의 정치참여를 막는 정치문화와 선거제도에 대한 비판이 거세게 일어나고 있는데, 만 18~ 24세의 피선거권 논쟁도 같은 선상에서 일어나고 있다.
 
 
 
@@ -99,8 +99,8 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 한국의 비례대표 비율은 다른 국가에 비해서도 독보적으로 낮은 편이다. 현재의 <대한민국헌법>으로 처음 치뤄진 1988년 총선에서는 지역구 224석 : 비례 75석으로 비율이 3:1이었으나, 2016년 총선에서는 253:47로 약 5:1의 비율로 차이가 벌어졌다. 이런 극적인 변화는 뒤에 설명할, 국회의원 전체 숫자가 고정된 현상과도 관련이 있다. 
 ### 지역구 제도(1): 소선거구제, 단순다수제
 1988년부터 한국의 지역구 선거는 "소선거구제, 단순다수제"로 치뤄졌다. 지역구마다 1명의 의원이 선출되는 (지역구의 크기가 작은) 소小선거구제이고, 과반이 되지 않더라도 가장 많이 득표한 사람이 당선되는 단순다수제이다. 이 제도를 운영하는 나라에서는 보통 '상대편'보다 더 많이 득표할 수 있는 정당(후보)에게 표가 집중되어서, 2개의 거대한 정당을 형성하게 된다. 이는 상대적으로 소수 의견을 대변하는 3, 4위 정당(후보)를 배제하는 부정적인 효과와, 상위권 후보도 치열한 경쟁에 참여하도록 강제하는 긍정적인 효과가 함께 있다.  
-지역구에서는 으레 1명만 선출하는 것이 당연한 것 같으나, 정답은 '그렇지 않다.' 한국에서도 1973~~1987년에는 지역구마다 가장 많이 득표한 2명의 후보가 당선되는 중中선거구제를 시행하기도 했다. 당시는 군부독재 정권 시절이었고(유신헌법 시절의 박정희 행정부, 전두환 행정부), 집권당인 보수주류 정당이 어느 지역구에서든 적어도 2위를 차지해서 단독 과반 의석을 확보할 수 있게끔 만들어진 제도였다. 1987년 민주화 이후 새 선거제도를 도입할 때, 보수주류 정당과 민주당계 정당이 모두 대부분 지역구에서 자신이 1위를 할 것이라는 판단으로 소선거구제 도입에 동의하였다.
-이와 유사한 현상은 현재 한국의 기초의회(시군구의회) 선거에서 발견할 수 있다. 한국은 몇 개의 읍면동을 묶어서 하나의 기초의회 지역구를 만들고, 인구수에 따라 한 지역구에서 2~~4인을 선출하는 제도를 채택하고 있다. 이는 유의미한 소수의견을 대변하는 3, 4위권 정당도 지방자치에 참여하도록 독려하는 제도이다. 하지만 1, 2위가 확실한 2개의 거대정당 입장에서는 2인 선거구가 훨씬 유리하다. 2018년 지방선거 직전에 중앙선관위가 기초의회의 2인 선거구를 줄이고 3~~4인 선거구를 늘리는 선거구 조정안을 각 지역에 제안한 바 있다. 그러나 선거구를 확정하는 권한을 가진 광역의회(시도의회)의 거대정당 소속 의원들은, 4인 선거구를 전부 2개의 2인 선거구로 쪼개는 방식으로 대응한 바 있다. 
+지역구에서는 으레 1명만 선출하는 것이 당연한 것 같으나, 정답은 '그렇지 않다.' 한국에서도 1973~ 1987년에는 지역구마다 가장 많이 득표한 2명의 후보가 당선되는 중中선거구제를 시행하기도 했다. 당시는 군부독재 정권 시절이었고(유신헌법 시절의 박정희 행정부, 전두환 행정부), 집권당인 보수주류 정당이 어느 지역구에서든 적어도 2위를 차지해서 단독 과반 의석을 확보할 수 있게끔 만들어진 제도였다. 1987년 민주화 이후 새 선거제도를 도입할 때, 보수주류 정당과 민주당계 정당이 모두 대부분 지역구에서 자신이 1위를 할 것이라는 판단으로 소선거구제 도입에 동의하였다.
+이와 유사한 현상은 현재 한국의 기초의회(시군구의회) 선거에서 발견할 수 있다. 한국은 몇 개의 읍면동을 묶어서 하나의 기초의회 지역구를 만들고, 인구수에 따라 한 지역구에서 2~ 4인을 선출하는 제도를 채택하고 있다. 이는 유의미한 소수의견을 대변하는 3, 4위권 정당도 지방자치에 참여하도록 독려하는 제도이다. 하지만 1, 2위가 확실한 2개의 거대정당 입장에서는 2인 선거구가 훨씬 유리하다. 2018년 지방선거 직전에 중앙선관위가 기초의회의 2인 선거구를 줄이고 3~ 4인 선거구를 늘리는 선거구 조정안을 각 지역에 제안한 바 있다. 그러나 선거구를 확정하는 권한을 가진 광역의회(시도의회)의 거대정당 소속 의원들은, 4인 선거구를 전부 2개의 2인 선거구로 쪼개는 방식으로 대응한 바 있다. 
 ### 지역구 제도(2): 지역구별 인구편차
 만약 인구 2만 명의 A지역구와 10만 명의 B지역구가 똑같이 1명의 지역구의원을 선출해 국회로 보낸다면, A지역구 주민 표의 가치는 국회 안에서 5배나 비싸진다고 할 수 있다. 이 예에서 볼 수 있듯, 모든 유권자에게 똑같이 투표권을 주는 민주주의 선거의 원칙이 실질적으로 작동하기 위해서는 각 지역구의 인구수가 어느정도 비슷해야 한다. 
 지역구별 인구 편차가 너무 큰 것에 대해 한국 헌법재판소는 꾸준히 위헌(헌법불합치)결정을 내렸다. 1992년 총선에서 지역구별 최대/최소 인구수 비율은 5.87:1에 달했는데, 현법재판소는 헌법이 명시한 평등선거 원칙을 지키기 위해 이 비율이 4:1(1995년 판례, 사건번호 95헌마224), 3:1(2001년, 2000헌마92), 2:1(2014년, 2012헌마192)을 넘기지 않아야 한다고 결정했다. 이에 따라 1992년 최대인구수 지역구인 '부산 해운대구·기장군'은 2016년에 '부산 해운대 갑/을'과 '부산 기장군'의 3개 선거구로 나뉘었고, 1992년 최소인구수 지역구인 '전남 장흥군'은 2016년에 이웃 행정구역까지 합쳐서 '전남 고흥군·보성군·장흥군·강진군' 선거구가 되었다. 
@@ -116,7 +116,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 지역구와 비례대표 제도를 동시에 운영하는 국가 중에서는 독일, 뉴질랜드, 스코틀랜드(자치의회) 등에서 연동형을 채택하고, 일본, 러시아, 타이완 등에서 병립형을 채택하고 있다. "정당이 실제로 득표한 비율과 의회 내 의석비율이 비슷할수록 민의를 잘 반영한 것"이라는 원칙을 따르자면, 병립형보다 연동형이 더 적합한 비례대표 제도라고 평가할 수 있다. 반대로 병립형은 지역구에서 많은 당선자를 배출할 수 있는 거대정당이 의회 주도권을 가지도록 유도하고, 다만 소수정당도 비례대표를 통해 의회에 입성할 수 있도록 '살려는 드리는' 차원으로 운영된다. 이로 미루어 볼때, 연동형을 채택한 국가는 비례대표 역시 지역구와 동등한 의원으로서 정당을 통해 유권자를 대표한다는 인식을 바탕으로 하고 있으며, 병립형에서는 지역구를 비례대표보다 우대하고 '지역구로 당선이 힘든 사람들을 비례대표 제도를 통해 부활시킨다'는 인식을 바탕으로 하고 있다.  
 ### 비례대표 제도(3): "의석할당정당"
 비례대표 제도의 중요한 특징 중 하나는, 정당이 비례대표를 배분받기 위해 충족해야 하는 조건이다. 한국에서는 정당투표 전국득표율 3% 이상, 또는 지역구 당선인 5석 이상인 정당에게 비례대표 의석을 배분한다. 한국 언론과 정치권에서는 이 조건을 주로 "봉쇄조항"이라고 표현한다. 3%의 득표율 기준은 낮은 것처럼 보이기도 하지만, 전체 인구수로 환산하여 150만 명의 지지를 받아야 하므로 마냥 낮다고만 생각할 수도 없다. 
-봉쇄조건을 얼마나 엄격하게 하느냐에 따라 그 나라 소수정당의 운명이 결정된다. 예를 들어, 터키처럼 봉쇄조건을 전국득표율 10% 이상으로 하면 소수정당이 결코 의회에 들어올 수 없지만, 새로운 정당이 일단 한 번 의회에 진입하게 되면 10% 가량의 의석을 차지하는 또다른 대형정당으로 자리 잡으므로 정치구도가 요동친다. 반대로 네덜란드나 아일랜드처럼 봉쇄조항이 아예 없으면 1~~2석짜리 소수정당이 대거 탄생하지만, 그 소수정당의 지지율이 갑자기 급등하지 않는 이상 극단적인 소수의견도 1~~2석 정도의 크기로 제어된 채 의회에서 안정적으로 소화할 수 있다. 또는, 스웨덴처럼 전국득표율이 낮더라도 특정 지역의 득표율이 12% 이상이면 비례대표를 배분할 수 있도록 하면, 전국적으로는 외면받지만 소외된 지역 입장에서 중요한 목소리를 대변하는 지역정당도 의회에 입성할 수 있다. 
+봉쇄조건을 얼마나 엄격하게 하느냐에 따라 그 나라 소수정당의 운명이 결정된다. 예를 들어, 터키처럼 봉쇄조건을 전국득표율 10% 이상으로 하면 소수정당이 결코 의회에 들어올 수 없지만, 새로운 정당이 일단 한 번 의회에 진입하게 되면 10% 가량의 의석을 차지하는 또다른 대형정당으로 자리 잡으므로 정치구도가 요동친다. 반대로 네덜란드나 아일랜드처럼 봉쇄조항이 아예 없으면 1~ 2석짜리 소수정당이 대거 탄생하지만, 그 소수정당의 지지율이 갑자기 급등하지 않는 이상 극단적인 소수의견도 1~ 2석 정도의 크기로 제어된 채 의회에서 안정적으로 소화할 수 있다. 또는, 스웨덴처럼 전국득표율이 낮더라도 특정 지역의 득표율이 12% 이상이면 비례대표를 배분할 수 있도록 하면, 전국적으로는 외면받지만 소외된 지역 입장에서 중요한 목소리를 대변하는 지역정당도 의회에 입성할 수 있다. 
 
 ### 국회의원 숫자
 지금까지의 내용을 보면 의아한 점이 
@@ -142,9 +142,9 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 (ㄷ) 하지만 한국 선거제도는 "완전 연동형"이 아니라 "절반 연동형"이니까... A당은 자기 몫의 비례대표 55석 중 절반인 27석만 먼저 가져간다. 
 (ㄹ) 이와 같이 "절반 연동형"의 원칙에 맞추어 A당 B당 C당 D당에게 우선 배정되어야 하는 비례대표를 모두 배분한다. 
 (ㅁ-1) 이렇게 배분한 뒤에 비례대표 의석 정원 47석 중에서 남은 의석이 7석 있다면...
-(ㅂ) 각 당의 정당투표 득표율과 같은 비율로 남은 7석을 배분한다. 즉 A당은 7석의 20%인 1~~2석을 추가로 배정받는다.
+(ㅂ) 각 당의 정당투표 득표율과 같은 비율로 남은 7석을 배분한다. 즉 A당은 7석의 20%인 1~ 2석을 추가로 배정받는다.
 
-이렇게, A당은 지역구의원 5명, "절반 연동형" 비례대표의원 27명, 남은 비례대표의석에서 의원 1~~2명을 확보해서, 총 33~~34석의 국회의원을 확보하게 된다. 
+이렇게, A당은 지역구의원 5명, "절반 연동형" 비례대표의원 27명, 남은 비례대표의석에서 의원 1~ 2명을 확보해서, 총 33~ 34석의 국회의원을 확보하게 된다. 
 원칙대로는 그래야 하는데...
 
 ### 개정(2): "연동형 비례대표" 의석수를 30석으로 제한
@@ -153,17 +153,17 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 아이고 어렵다. 이 이야기를 다시 설명하기 위해, 앞서 설명한 "A당"의 예시를 다시 꺼내보자. (ㄹ)까지는 앞서서와 마찬가지이고, (ㅁ)에서부터 이야기가 달라진다.
 (ㅁ-2) "절반 연동형"의 원칙에 맞추어 A, B, C, D당에 먼저 배분된 의석수가 합쳐서 40석인데, 이것은 30석의 제한을 넘어선 숫자이다. 
 (ㅁ-3) 30석의 제한에 맞추기 위해, 각 당에 배분된 "절반 연동형" 비례대표의원 숫자를 조정한다. 모든 정당의 "절반 연동형 의석"을 3/4만큼만 배정한다. 
-(ㅁ-3) 따라서 A당에 배정되는 "절반 연동형" 의석은 27석의 3/4인 20~~21석이다. 
-(ㅂ) 그리고 남은 전체 비례대표 의석수는 17석. A당은 17석의 20%인 3~~4석을 추가로 배정받는다. 
+(ㅁ-3) 따라서 A당에 배정되는 "절반 연동형" 의석은 27석의 3/4인 20~ 21석이다. 
+(ㅂ) 그리고 남은 전체 비례대표 의석수는 17석. A당은 17석의 20%인 3~ 4석을 추가로 배정받는다. 
 
-이렇게 A당은 지역구의원 5명, (총 30석으로 제한된) "절반 연동형" 비례대표의원 20~~21명, 남은 비례대표의석에서 3~~4명을 확보하여, 총 28~~30석의 국회의원을 확보하게 된다. 
-지금까지 살펴본 A당의 예시에서 보듯, 30석의 제한이 생기면 의석수가 적은(특히 지역구 당선자가 적은) 정당에게는 약간의 의석수 손해가 생기는데, 이는 당의 규모가 작을수록 1석의 가치가 중요하다는 점에서 매우 뼈아플 수 있다. 반대로, 지역구 당선자가 많아서 비례대표 의석을 확보하기 힘든 거대정당은, 1~~2명이라도 더 많은 비례대표 의석을 확보하여 (지역구가 아닌) 전국단위로 활동하는 사람들을 더 많이 국회로 입성시킬 여지가 생긴다. 
+이렇게 A당은 지역구의원 5명, (총 30석으로 제한된) "절반 연동형" 비례대표의원 20~ 21명, 남은 비례대표의석에서 3~ 4명을 확보하여, 총 28~ 30석의 국회의원을 확보하게 된다. 
+지금까지 살펴본 A당의 예시에서 보듯, 30석의 제한이 생기면 의석수가 적은(특히 지역구 당선자가 적은) 정당에게는 약간의 의석수 손해가 생기는데, 이는 당의 규모가 작을수록 1석의 가치가 중요하다는 점에서 매우 뼈아플 수 있다. 반대로, 지역구 당선자가 많아서 비례대표 의석을 확보하기 힘든 거대정당은, 1~ 2명이라도 더 많은 비례대표 의석을 확보하여 (지역구가 아닌) 전국단위로 활동하는 사람들을 더 많이 국회로 입성시킬 여지가 생긴다. 
 
 ### 논의되었으나 폐기된 내용
 아래의 내용은 
 
 1. 지역구 의석 축소, 비례대표 의석 증가: 폐기
-개정 협상을 시작할 때 발표된 초안은, 국회의원 정원을 300석으로 유지하면서 지역구 의석과 비례대표 의석을 225석과 75석으로 조정했다. 한국의 비례대표 국회의원은 보통 사회적 소수자, 직업군, 특정 이슈에 대한 전문가 등 지역구를 넘어서 국가단위로 분포하는 계층을 대변하는 역할을 맡았다. 비례대표 의석의 비율을 증가시키면, 이들 계층의 주장이 국회 안에서 더 많이 논의되도록 할 수 있었다. 그러나 2020년 총선의 의석수는 결국 2016년과 마찬가지로 지역구 253석, 비례대표 47석으로 확정되었다. 선거법 개정 협상에 참여한 정당들은 법률 통과 가능성을 높이기 위해 이와 같이 결정했다. 지역구, 특히 농어촌 지역구 숫자가 급격하게 줄어드는 것에 대해 현직 지역구국회의원들의 반발이 너무 컸다. 그렇다고 지역구 의석수를 유지하고 비례대표 의석수만 더 증가시키자니, "전체 국회의원 정수를 축소해도 모자랄 판에 의석수를 늘인다"는 여론의 감정적 비판 의견이 쏟아질 것에 대한 우려가 컸다. 2014년에 중앙선관위가, 2019년에 정의당 심상정 대표가 선거법 개정과 맞물려 국회의원 정수를 330~~360명으로 늘리는 것을 제안하였으나, 모두 소리소문 없이 논의에서 제외되었다. 
+개정 협상을 시작할 때 발표된 초안은, 국회의원 정원을 300석으로 유지하면서 지역구 의석과 비례대표 의석을 225석과 75석으로 조정했다. 한국의 비례대표 국회의원은 보통 사회적 소수자, 직업군, 특정 이슈에 대한 전문가 등 지역구를 넘어서 국가단위로 분포하는 계층을 대변하는 역할을 맡았다. 비례대표 의석의 비율을 증가시키면, 이들 계층의 주장이 국회 안에서 더 많이 논의되도록 할 수 있었다. 그러나 2020년 총선의 의석수는 결국 2016년과 마찬가지로 지역구 253석, 비례대표 47석으로 확정되었다. 선거법 개정 협상에 참여한 정당들은 법률 통과 가능성을 높이기 위해 이와 같이 결정했다. 지역구, 특히 농어촌 지역구 숫자가 급격하게 줄어드는 것에 대해 현직 지역구국회의원들의 반발이 너무 컸다. 그렇다고 지역구 의석수를 유지하고 비례대표 의석수만 더 증가시키자니, "전체 국회의원 정수를 축소해도 모자랄 판에 의석수를 늘인다"는 여론의 감정적 비판 의견이 쏟아질 것에 대한 우려가 컸다. 2014년에 중앙선관위가, 2019년에 정의당 심상정 대표가 선거법 개정과 맞물려 국회의원 정수를 330~ 360명으로 늘리는 것을 제안하였으나, 모두 소리소문 없이 논의에서 제외되었다. 
 
 2. 비례대표 후보 명단을 권역별로 작성: 폐기
 2020년 총선에서도 기존과 마찬가지로, 각 정당은 비례대표 후보 명단을 전국단위로 만든다. 그러나 개정 협상 과정에서는 후보 명단을 서울권, 수도권, 충청권, 전라-제주권 등의 '권역'으로 나누어 작성하는 내용이 비중있게 논의되었다. A당의 비례대표 후보들이 서울권역 1번, 2번, 3번, ... 충청권역 1번, 2번, ... 등으로 번호를 배정받고, 정당득표율에 비해 지역구 후보가 적게 당선된 권역부터 비례대표 의석을 배정하는 방식이다. 이것은 특정 권역을 대표하는 국회의원이 모두 1개의 정당에 소속되는 지역주의 구도를 완화하는 취지에서 제안되었다. A당이 ㄱ권역에서 지역구 의석을 얻지 못해도, ㄱ권역을 대표하는 A당 비례대표의원을 통해 지역의 소수의견을 국회에서 대변할 수 있기 때문이다. 그러나 권역별 비례대표 제도는 협상 막판에 폐기되었다. 
@@ -176,7 +176,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 (### 예상되는 변화)
 
 ## 2020 국회의원 총선거 일정
-2020년 국회의원 총선거는 총 300명의 국회의원을 선출하는 선거로, 공석인 6석의 구·시·군의 장, 27석의 지방의회의원 재보궐선거도 함께 실시된다. 투표일은 4월 15일(수)이며, 4월 1일(수)~~6일(월)에 재외투표가, 10일(금)~~11일(토)에 사전투표가 진행된다. 
+2020년 국회의원 총선거는 총 300명의 국회의원을 선출하는 선거로, 공석인 6석의 구·시·군의 장, 27석의 지방의회의원 재보궐선거도 함께 실시된다. 투표일은 4월 15일(수)이며, 4월 1일(수)~ 6일(월)에 재외투표가, 10일(금)~ 11일(토)에 사전투표가 진행된다. 
 
 2019년 4월 15일 (선거일 12개월 전)
 원래 국회의원 지역구는 이 날까지 확정하여야 한다. 그러나 2019년에 선거제도 개편이 추진되면서, 제도가 확정되지 않은 상태에서 선거구 구역을 정하는 것 자체가 불가능하였다. 선거제도 개편안을 담는 <공직선거법> 개정작업이 2019년 12월 27일에 완료되면서, 국회의원 지역구는 실질적으로 이 날 확정되었다.
@@ -189,7 +189,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 공무원, 공공기관 임원 등 〈공직선거법〉제53조에 의해 입후보가 제한되는 직에 있는 사람이 지역구국회의원 선거에 입후보할 경우, 이날까지 사직해야 한다.
 이 날부터 현직 국회의원이 유권자를 상대로 의정활동을 보고하는 것이 금지된다.
 
-2019년 11월 17일 ~~ 2020년 2월 15일 (선거일 150~~60일 전)
+2019년 11월 17일 ~  2020년 2월 15일 (선거일 150~ 60일 전)
 국외부재자 신고, 재외선거인 등록
 외국의 재외투표소에서 투표해야 하는 (1)국외부재자의 신고와 (2)재외국민의 선거인 등록 기간이다.
 (1) 국내에 거주하지만 투표일에 외국에 체류하는 사람, 또는 한국에 주민등록이 되어있지만 외국에 거주하는 사람은 재외공관에 설치되는 재외투표소에서 투표를 하기 위해, 이 기간 사이에 선관위에 "국외부재자"로 신고해야 한다. 
@@ -199,21 +199,21 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 3월 16일 (선거일 30일 전)
 입후보가 제한되는 직에 있는 사람이 비례대표국회의원 선거나 재보궐선거에 입후보할 경우, 이날까지 사직해야 한다. 또한 이날까지 사직 또는 당선무효가 확정된 지방의회의원 및 지방자치단체장에 대해서는 재보궐선거가 실시된다.
 
-3월 24~~28일 (선거일 22~~18일 전)
+3월 24~ 28일 (선거일 22~ 18일 전)
 선거인명부 작성, 거소투표 및 공보물 발송주소 신청
 각 지역 선거관리위원회가 선거인명부를 작성한다. 3월 24일부터는 선거권자가 이사를 해서 새로 전입신고를 하더라도, 과거 주민등록지의 선거권을 가진다. 선거 관련 우편물도 과거 주소로 발송된다.
 군 복무, 수감, 장기간 입원 등의 이유로 선거 당일 투표소 방문이 불가능할 경우, 구·시·군청 을 통해 ‘거소투표’를 신청할 수 있다. 등기우편으로 투표용지를 받은 뒤, 자신이 머무는 곳에서 기표한 투표용지를 등기우편으로 발송할 수 있다.
 군인 및 경찰공무원은 중앙선거관리위원회 홈페이지를 통해, 선거공보를 자신의 근무지로 발송토록 신청할 수 있다.
 
-3월 26~~27일 (선거일 20~~19일 전)
+3월 26~ 27일 (선거일 20~ 19일 전)
 후보자 등록
 국회의원 선거 및 재보궐선거의 후보자는 이 기간에 각 지역 선관위에 공식등록해야 한다.
 
-4월 1~~6일 (선거일 14~~9일 전, 한국시간 기준)
+4월 1~ 6일 (선거일 14~ 9일 전, 한국시간 기준)
 외국에서의 재외투표일
-재외선거인과 국외부재자는 이날 각국의 지정된 재외투표소에서 투표할 수 있고, 재외투표소는 중앙선관위 홈페이지 등에서 확인할 수 있다. 한국시간으로 4월 1일(수)~~6일(월)에 해당하는 날짜에, 현지시간으로 매일 08:00~~17:00에 방문하여 투표할 수 있다. 
+재외선거인과 국외부재자는 이날 각국의 지정된 재외투표소에서 투표할 수 있고, 재외투표소는 중앙선관위 홈페이지 등에서 확인할 수 있다. 한국시간으로 4월 1일(수)~ 6일(월)에 해당하는 날짜에, 현지시간으로 매일 08:00~ 17:00에 방문하여 투표할 수 있다. 
 
-4월 2~~14일 (선거일 13~~1일 전)
+4월 2~ 14일 (선거일 13~ 1일 전)
 공식 선거운동기간
 모든 후보는 4월 1일까지 벽보(포스터)를, 4월 3일까지 공보물(홍보책자)을 선관위에 제출해야 한다. 선관위는 4월 3일부터 벽보를 야외에 일괄 부착한다. 모든 후보의 공보물 및 벽보는 선거운동기간 동안 중앙선관위 홈페이지에 게시된다.
 선관위 산하 선거방송토론위원회가 주관하는 후보 대담 및 토론회가 이 기간에 진행된다. 비례대표국회의원 선거에 대해서는 2회 이상, 지역구국회의원, 구·시·군의 장 선거에 대해서는 1회 이상 진행된다.
@@ -223,13 +223,13 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 지역마다 설치할 투표소 위치가 확정된다. 선관위는 투표소와 투표방법을 안내하는 선거안내문, 후보별 공보물을 유권자 자택으로 발송한다. 거소투표자에게는 투표용지도 함께 발송한다.
 이날부터 유권자는 자신의 투표소를 중앙선관위 홈페이지에서 확인할 수 있다.
 
-4월 10~~11일 (선거일 5~~4일 전)
+4월 10~ 11일 (선거일 5~ 4일 전)
 사전투표일
-유권자는 이날 전국 모든 사전투표소에서 투표할 수 있다. 사전투표소는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 10일(금)과 11일(토), 06:00~~18:00이다.
+유권자는 이날 전국 모든 사전투표소에서 투표할 수 있다. 사전투표소는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 10일(금)과 11일(토), 06:00~ 18:00이다.
 
 4월 15일 (선거일 당일)
 공식 선거일
-유권자는 거주지별로 지정된 투표소 1곳에서만 투표할 수 있으며, 투표소 소재지는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 15일(수) 06:00~~18:00이다.
+유권자는 거주지별로 지정된 투표소 1곳에서만 투표할 수 있으며, 투표소 소재지는 중앙선관위 홈페이지에서 확인할 수 있다. 투표시간은 4월 15일(수) 06:00~ 18:00이다.
 모든 선거운동이 이날 00:00부터 금지되며, 투표독려만 허용된다.
 투표시간 종료 즉시 개표가 시작된다. 각 투표소의 투표함을 지정된 개표소로 운송한 뒤, 각 정당이 등록한 개표참관인의 감시하에 개표가 진행된다.
 
@@ -250,7 +250,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 (당선 당시 더불어민주당)
 
 수도권이라 하더라도 서울과의 거리가 제법 멀고 인구 규모가 그렇게 크지 않은 곳들이 있다. 이런 지역은 보통 서울 중심의 중앙정치가 깊이 관여하기도 어렵고 타 지역과의 교류가 그렇게 많지도 않으며, 인구의 유입/유출도 별로 없지만, 인구가 아주 적은 것도 아니라서 일정 수준의 경제권을 형성하고 있다. 따라서 지역 내의 생활양식이나 이익구조가 크게 바뀔 일이 없으며, 그 구조 안에서 높은 위치를 차지하는 몇몇 인물이 지역 정계의 주도권을 놓고 다투기 마련이다. 안성시가 여기에 해당한다. 수도권으로서는 적은 편인 약 18만 명의 인구, 경기도 남동부 경계에 접한 지리적 위치, 철도교통(특히 수도권 전철)이 연결되지 않는 조건이 겹친다. 
-이런 지역에서 갑자기 재보궐선거가 생기면, 으레 상대적으로 보수적인 후보 3~~4명이 거대 양당 소속이나 무소속으로 출마하여 경합하는 구도가 짜인다. 최근에 이와 유사하게 진행되어 참고할 만한 선거가 있었으니, 대통령 선거 직전 2017년 4월에 실시된 경기도 포천시장 보궐선거였다. 안성과 비슷한 면이 많은 포천에서는 더불어민주당, 자유한국당, 바른정당(신보수 정당), 무소속에서 주력 후보들이 등장하여 각각 15% 이상의 득표율을 기록했다. 공약을 놓고 경쟁하기보다는 지역언론의 대리전을 통한 상호 공격이 많았으며, 복지이슈나 지역 내 석탄발전소 문제에 대해서도 모든 후보가 애매하거나 관조적인 태도를 보이는 것으로 일관했다. 
+이런 지역에서 갑자기 재보궐선거가 생기면, 으레 상대적으로 보수적인 후보 3~ 4명이 거대 양당 소속이나 무소속으로 출마하여 경합하는 구도가 짜인다. 최근에 이와 유사하게 진행되어 참고할 만한 선거가 있었으니, 대통령 선거 직전 2017년 4월에 실시된 경기도 포천시장 보궐선거였다. 안성과 비슷한 면이 많은 포천에서는 더불어민주당, 자유한국당, 바른정당(신보수 정당), 무소속에서 주력 후보들이 등장하여 각각 15% 이상의 득표율을 기록했다. 공약을 놓고 경쟁하기보다는 지역언론의 대리전을 통한 상호 공격이 많았으며, 복지이슈나 지역 내 석탄발전소 문제에 대해서도 모든 후보가 애매하거나 관조적인 태도를 보이는 것으로 일관했다. 
 
 ### 강원도 횡성군수
 전임 군수 한규호의 형법상 뇌물(수뢰)죄 판결에 따른 피선거권 박탈
@@ -279,7 +279,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 전임 군수 이윤행의 공직선거법 위반 판결에 따른 당선무효
 (당선 당시 민주평화당)
 
-함평군은 한동안 한국 지방자치의 훌륭한 성공사례로 인정받았다. 2000년대부터 함평 나비축제가 전국적으로 상당한 흥행을 거두며 알려졌는데, 이는 수도권 바깥의 지방정부가 외지 관광객을 끌어모으기 위해 축제를 개발하는 사업의 효시였다. 이 공로를 인정받아 무난하게 3선에 성공한 함평군수 이석형(1998~~2010)은 2014년 민주당계 정당(새정치민주연합)의 전라남도지사 후보로 출마하려고 했으나, 경선에 참가한 다선 국회의원들에게 밀려 존재감을 드러내지 못했다. 2014년 전남지사에 당선된 사람은 함평(당시 담양군·함평군·영광군·장성군)에서만 4선을 한 국회의원 이낙연이었고, 이후 이낙연은 국무총리를 거쳐 대선주자로 떠오른다. 
+함평군은 한동안 한국 지방자치의 훌륭한 성공사례로 인정받았다. 2000년대부터 함평 나비축제가 전국적으로 상당한 흥행을 거두며 알려졌는데, 이는 수도권 바깥의 지방정부가 외지 관광객을 끌어모으기 위해 축제를 개발하는 사업의 효시였다. 이 공로를 인정받아 무난하게 3선에 성공한 함평군수 이석형(1998~ 2010)은 2014년 민주당계 정당(새정치민주연합)의 전라남도지사 후보로 출마하려고 했으나, 경선에 참가한 다선 국회의원들에게 밀려 존재감을 드러내지 못했다. 2014년 전남지사에 당선된 사람은 함평(당시 담양군·함평군·영광군·장성군)에서만 4선을 한 국회의원 이낙연이었고, 이후 이낙연은 국무총리를 거쳐 대선주자로 떠오른다. 
 2018년 지방선거에서 (현재는 대안신당과 민주평화당으로 나뉘어진) 당시의 민주평화당은 함평군을 비롯하여 전라남도 소속의 군수를 3명이나 당선시켜서 나름의 존재감을 유지했다. 그러나 전라남도지사 선거로 눈길을 돌리면, 민주평화당 후보(민영삼)는 해당 군에서도 20% 미만의 저조한 득표율을 기록했다. 민주평화당은 전남에서 정당 자체의 지지를 모으기보다는, 각 지방의 지지기반을 갖춘 후보들이 합류하는 방식으로 지속되었다고 볼 수 있다. 그 점에서 민주평화당에게 함평군수 재선거는 유력후보 영입 능력을 평가받을 매우 중요한 선거이다. 
 재미있게도, (민주평화당의 전신인) 국민의당이 전라권 의석을 대거 차지했던 2016년 총선에서, 전남 유일의 더불어민주당 당선 지역구가 바로 함평(당시 담양군·함평군·영광군·장성군)이었다. 여기서 당선된 이개호 의원은 농림축산식품부 장관까지 지내며 지역정계의 거물 입지만큼은 분명하게 다졌다. 
 
