파일명 수정 + 챕터 큰글씨 수정

--- a/06_남부지방 권역.md
+++ b/06_남부지방 권역.md
@@ -56,7 +56,8 @@
 
 
 ### 전라권
-**
+**민주당계 정당끼리의 노선갈등은 전라권 선거에 영향을 미쳤다. 민주당계 정당이 집권한 상황에서 이는 정권의 행동에 큰 영향을 미칠 것이다.**
+
 삼국시대부터 1960년대까지, 전라권은 호남평야에서 나오는 풍부한 농산물을 바탕으로 한반도에서 가장 부유했던 지역이었다. 부유한 지주와 교육의 기회가 적은 농민들이 보수적인 표심을 보여주는 것은 어쩌면 당연한 일이다. 호남 대표 정치인 김대중이 민주당계 정당의 대통령 후보로서 박정희와 맞붙었을 때(1971) 전라권은 김대중에게 득표율 60%대의 압도적 지지를 보내긴 했지만, 대선은 대선이고, 같은 전라권 정치인들이 지역구에서 맞붙는 총선에서는 전라권이 특별히 민주당계 정당을 더 지지하지는 않았고, 의석수도 언제나 1기 군사정권의 집권당인 민주공화당이 다수를 차지했다. 충청권/경북권/경남권과 마찬가지로 보수주류 정당이 농촌에서 매우 강하고, 도시에서 민주당계 정당이 강한 구도를 유지했다. 
 
 이 구도는 두 가지 사건으로 바뀌어버린다. 1980년 5월 광주의 민주화 운동과 2기 군사정권의 학살. 그리고 81년 1월에 내란음모 혐의를 뒤집어쓰고 사형 선고를 받는 김대중. 이 두 사건으로 전라권의 표심은 김대중을 중심으로 한 민주당계 정당을 향해 완전히 쏠린다. 게다가 전라권 바깥에서는 군사정권의 짜놓은 구도대로 광주의 '소요사태'와 '빨갱이' 김대중의 내란음모만을 듣게 되므로, 전라권과 타 지역의 유권자 사이에도 (아직까지도 완전히 풀리지 않은) 앙금이 남아서 호남을 고립시키는 지역주의 구도가 완성되어버린다. 
@@ -64,6 +65,7 @@
 이에 따라 전라권은 한동안 민주당계 정치인, 특히 80년대 김대중과 함께 제도정치 안에서 민주화운동을 진행한 정치인들에게 최후의 보루가 되었다. 이들은 보수주류 정권을 끝내고 민주당 정권을 창출하기 위해, 보수적인 제3세력 정당과도 손을 잡는 등 (좋게 말하면) 정치적 유연성을 갖추고 (나쁘게 말하면) 정치적 개혁성이 떨어지는 모습을 보여주었다. 이 부분은 80/90년대 학생운동이나 90년대 김대중의 영입을 통해 정계에 입문한 뒷세대 민주당계 정치인들과 갈라지는 중요한 차이로 드러난다. 
 
 이 차이점이 갈등으로 폭발하는 계기가 2002년 새천년민주당의 대선후보 경선이었다. 당 중진들이 직전 대선의 유력 제3후보였던 이인제를 영입하였으나, 젊은 소장파 세력이 앞세운 노무현에게 패배한 것이다. 이 때부터 20년간, 전라권은 과거의 호남 중진들과 친밀하여 상대적으로 보수적인 계파(이른바 <u>'동교동계'(김대중의 서울 자택이 있던 마포구 동교동에서 따온 표현.)</u>)와 과거의 소장파와 친밀하여 상대적으로 자유주의적인 계파(이른바 '친노')로 주욱 이어지는, 민주당 내부의 당내 우파와 개혁파가 맞붙는 전장이 되었다. 보통 그 전쟁은 합쳐진 당 안에서 경선을 통해 이뤄지기도 했지만, 민주당계 정당이 둘로 나뉜 채 본선에서 맞붙기도 했다. 
+
 총선을 앞두고 민주당계 정당이 갈라져서 '민주당계 주류정당'과 '전라권 민주당계 제3정당'으로 맞선 경우는, 지금까지 2004년 총선과 2016년 총선의 두 번 있었다. 2003년에 노무현 대통령을 지지하던 새천년민주당 및 한나라당(보수주류 정당) 안의 개혁세력이 탈당하여 열린우리당을 창당한다. 당시 전라권 지역구의원 29명 중 9명이 열린우리당에 합류했는데, 2004년 총선에서는 총 31석 중 열린우리당 25석, 새천년민주당 5석의 결과가 나왔다. 두 당이 2007년에 다시 통합된 이후, 2015년에는 이른바 '친노'와 갈등이 있는 '비노'계열 정치인들이 당시 갓 민주당계 정당에 입당한 안철수와 함께 새정치민주연합(더불어민주당)을 탈당하여 국민의당을 창당한다. 이 때는 전라권 지역구의원 30명 중 12명이 국민의당에 합류했고, 2016년 총선에서는 총 28석 중 더불어민주당 3석, 국민의당 23석의 결과가 나왔다. 
 결과만 놓고 보면, 지금까지 전라권의 민주당계 정당 지지자들은 어느 쪽이든 새로 창당한 정당에 더 많은 힘을 실어주었다. 전라권 유권자가 현재의 민주당계 정당 체계가 변화하기를 오랫동안 바라고 있다는 의미로 해석할 수 있다. 2020년 총선에서는 그 변화의 4년에 대한 냉정한 평가가 이뤄질 것이다. 
 
@@ -104,7 +106,8 @@
 ##### 
 
 ### 제주특별자치도
-**제주도의 총선은
+**'뭍'과 분리된 제주도의 특수한 사회환경, 그로 인해 벌어진 아픈 역사. 제주도의 표심을 이해하는 키워드이다.**
+
 제주도에서 국회의원 총선거는 언제나 아픈 기억을 떠올리게 한다. (남북한 통합 총선거가 아닌) 남한 단독의 총선거와 정부수립을 반대하는 시민과 경찰이 충돌하여, 1948년부터 6년간 학살이 지속되었던 제주 4·3 사건 때문이다. 1988년부터 한국 총선은 4월 초중순에 시행되었고, 때문에 제주도 각지에서 4·3 추념 행사와 합동 제사를 지내는 4월 초를 거치면, 그 기억과 감각은 유권자에게 남아 제주도 선거구도에 알게 모르게 영향을 끼칠 수 밖에 없다.
 
 물론 4·3 관련 행사를 할래야 할 수 없던 상황에서는 그런 영향이 전혀 없었다. (사실, 집권당 이외의 당을 찍으려고 하면 공포에 질릴 수 밖에 없지 않겠나.) 4·3과 무관하게 보더라도, 오랜 기간동안 제주도의 총선은 곧 제주도 내부정계의 실력자를 여의도로 보내는 과정이었고, 그 실력자는 보통 자유당, 민주공화당, 민주정의당 등 독재정권 시절의 보수주류 정당에 몸담곤 했다. 하지만 그 실력자가 언제나 보수주류 정당에 있었던 것은 아니고, 공천에서 탈락하거나 선거에서의 불리하다고 판단하면 얼마든지 무소속으로 출마하여 당선되기도 했다. 지역정계의 실력자가 서울의 중앙당보다도 세력이 강하기 때문에 가능한 행동이었다. 1963년부터 1996년 총선까지 제주도는 23석의 지역구국회의원을 배출했는데, 그 중 보수주류 정당이 12번, 무소속이 10번, 민주당계 정당은 단 1번만 당선되었다. 그 시간을 특히 오래 보낸 다선 국회의원으로, <u>변정일(제주도 전역·서귀포시, 1979~ 80, 92~ 2000)</u>, <u>양정규(제주도 전역·북제주군: 1967~ 71, 73~ 79, 85~ 88, 92~ 2000, 02~ 04)</u>, <u>현오봉(제주도 전역·남제주군: 1958~ 60, 63~ 72, 79~ 80)</u>, <u>현경대(제주도 전역·제주시: 1981~ 88, 92~ 2004)</u> 등이 있다. 이 4명의 당선횟수를 합치면 19선인데, 그 중 8번은 무소속으로 당선된 것이었다. 
@@ -120,6 +123,7 @@
 
 ### 경북권
 **현재의 보수주류 정당이 완전히 사라질 수 없다면, 경북의 표심을 통해 그 정당이 더 보수적으로 혹은 덜 보수적으로 변하는지 살펴볼 가치가 충분하다.**
+
 많은 사람들이 경북권을 '보수의 성지'로만 여기며 간단하게 퉁치고 지나가지만, 그 보수적인 표심이 어떻게 표현되는지 알아보기 위해서라도 경북권을 반드시 세심히 살펴봐야 한다. 한 선거구에서 2명을 선출하던 1973~ 85년에에는 이 곳에서도 보수주류 이외의 정당들이 주로 2위로(간혹 1위로) 당선되는 일이 많았다. 이 시절 당선된 '이외 정당' 출신으로는 국회의장과 부의장을 각각 지낸 이만섭(대구 중구·서구: 1979~ 88)과 홍사덕(경북 영주시-영풍군-영양군-봉화군: 1981~ 88)같은 꼬장꼬장한 거물들도 있었다. 이 경험이 남아있는 경북권은 보수주류 정당에게 호락호락하게 표를 안겨주지 않았다. 그 격변의 순간을 잠깐 살펴보자. 
 
 첫 번째는 1996년 총선으로, 군사정권 시절의 핵심 인물(김종필, 박철언, 허화평 등)이 당시 대통령이자 당 총재 김영삼이 주도하는 보수주류 정당(민주자유당)을 나온 후 창당한 자유민주연합(자민련)과 무소속의 대약진이 있었다. 김영삼의 정파 '민주계'는 보수주류 정당 안에서 군부독재의 잔재를 완전히 끝냈다고 생각했지만, 총선에서 경북권의 민심은 이를 쉽게 받아들이지 않았다. 공천에서 탈락하여 민주자유당에서 쫓겨난 무소속 후보들은 지역구에서 자신의 영향력을 십분 발휘했으며, 자민련 역시 충청권 제3정당이자 보수적인 제3세력 정당으로서 경북권에서 큰 인기를 끌었다. 이 총선에서 경북권(전체 32석)에서만 자민련 10석, 무소속 8석이 당선되어 민주자유당은 과반조차 차지하지 못한다. 
@@ -159,6 +163,7 @@
 
 ### 경남권
 **경남권의 선거결과는 단순한 의석수 이상의 의미가 있다. (선거를 통한) 한국 사회와 정치지형의 변화는 보통 경남권에서 시작되었다.**
+
 경남권의 총선 결과는 한국의 민주주의적, 자유주의적, 사회주의적 변화를 선도하곤 했다. 한국전쟁 당시 임시수도의 경험, 국가가 주도한 중화학공업의 발달, 각기 다른 이야기를 가진 전국구 대선주자 정치인 3명(김영삼, 노무현, 권영길)이 탄생하는 과정 등이 모두 결합되어 가능한 일이었다. 역사적으로 민주당계 정당의 세가 압도적으로 강했던 서울, 그리고 역사적으로 보수주류 정당이나 지역구도에 따른 정당 지지세가 탄탄한 다른 지방들이 기존 한국의 중앙정치 구도를 탄탄히 받치고 있었다면, 그 구도가 근본적으로 갈아엎어지는 이른바 '정초선거'의 향방을 결정한 것은 경남권이었다. 
 
 경남권의 표심은 독재정권에게 수시로 준엄한 심판을 내렸다. 1958년 총선 당시 가장 많은 지역구(40석)를 가지고 있던 경상남도(부산시, 울산군 포함)는 이승만의 자유당(보수주류 정당)이 도내에서 과반의석을 차지하지 못하도록 막았다. 이 때 전국에서 과반의석을 간신히 확보하여 다음 선거의 승리를 장담할 수 없었던 자유당은, 1960년 대선에서 초유의 부정선거를 일으켜 스스로 몰락하는 단초를 마련한다. 
